Attempt to fix problem of missing commons-logging bundle

--- a/de.metas.edi.esb.camel/pom.xml
+++ b/de.metas.edi.esb.camel/pom.xml
@@ -123,6 +123,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<!-- needed by smooks -->
 		<dependency>
 			<artifactId>commons-logging</artifactId>
@@ -223,7 +224,7 @@
 						-->
 						<Private-Package>
 							org.apache.poi.*,
-							org.apache.commons.logging.*
+							org.apache.commons.logging.*,
 							{local-packages}
 						</Private-Package>
 
