port recent desadv-code

--- a/de.metas.edi.esb.camel/pom.xml
+++ b/de.metas.edi.esb.camel/pom.xml
@@ -156,6 +156,13 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		    <version>1.18.12</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
 			<scope>test</scope>
